--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -16,7 +16,6 @@ Logo
 
 .letter1 {
     position: relative;
-    width: auto;
     padding-left: 3rem;
 }
 
@@ -43,6 +42,11 @@ Nav-Bar
 .primary-nav a {
     color: black;
     margin: 0 2rem;
+    padding: 0 0.5rem 0.3rem;
+}
+
+.primary-nav li a:hover {
+    border-bottom: 1px solid black;
 }
 
 
@@ -52,7 +56,7 @@ Hero
 ----------------
  */
 
-.hero {
+.hero-image {
     width: 60%;
     height: 20%;
 }
@@ -65,10 +69,92 @@ img {
 
 /* 
 ----------------
+Service
+----------------
+ */
+
+.service-box {
+    padding: 8rem 0;
+}
+
+
+/* 
+----------------
+Portfolio
+----------------
+ */
+
+.portfolio {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.item {
+    position: relative;
+    width: 100%;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    transition: 0.5s;
+}
+
+.item .description {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    padding: 1rem 0;
+    top: 30%;
+    text-align: center;
+    background-color: hsla(320, 74%, 0%, 0.62);
+    color: white;
+    visibility: hidden;
+}
+
+.item:hover {
+    transform: scale(1.2);
+    transition: 0.3s;
+    opacity: 0.8;
+}
+
+
+/* 
+----------------
 Footer
 ----------------
  */
 
 .small-text {
     font-size: 70%;
+}
+
+.small-text a {
+    margin: 0 6rem;
+}
+
+
+/* 
+----------------
+Media Queries
+----------------
+ */
+
+@media screen and (min-width: 1201px) {
+    .portfolio {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media screen and (min-width: 480px) and (max-width: 768px) {
+    .portfolio {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .portfolio {
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 }
