--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -33,6 +33,10 @@ a:hover {
 
 /* Nav Toggler */
 
+.navbar a {
+    color: black;
+}
+
 .menu-icon {
     position: relative;
     width: 50px;
@@ -237,7 +241,7 @@ Image-section
 */
 
 .image-section {
-    width: 100%;
+    width: 100vw;
     padding: 20%;
     background-image: url(../images/image-section1.JPG);
     background-position: 80% 100%;
@@ -280,8 +284,8 @@ Portfolio
 }
 
 .item {
-    position: relative;
-    width: 100%;
+    /* position: relative; */
+    /* width: 100%; */
     height: auto;
     padding: 1rem;
     transition: 0.5s;
@@ -381,8 +385,13 @@ Contact
     margin-bottom: 2.2em;
 }
 
-.info-box:hover,
+
+/* .info-box:hover,
 .info-box:hover a {
+    color: #a4c3b2;
+} */
+
+.info-box i:hover {
     color: #a4c3b2;
 }
 
@@ -411,10 +420,27 @@ Media Queries
  */
 
 @media screen and (min-width: 1201px) {
-    #portfolio {
+    .hero {
+        display: flex;
+        justify-content: space-between;
+    }
+    /* #portfolio {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
+    } */
+}
+
+@media screen and (min-width: 767px) and (max-width: 1200px) {
+    /* #portfolio {
+        display: grid;
+        grid-template-columns: 1fr;
+    } */
+    .hero {
+        display: block;
+    }
+    .hero-image {
+        width: 100%;
     }
 }
 
@@ -422,21 +448,21 @@ Media Queries
     html {
         font-size: 80%;
     }
-    #portfolio {
+    /* #portfolio {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr;
         margin: 2em 0;
-    }
+    } */
 }
 
 @media screen and (max-width: 480px) {
     html {
         font-size: 60%;
     }
-    #portfolio {
+    /* #portfolio {
         display: grid;
         grid-template-columns: 1fr;
-    }
+    } */
     .item {
         margin-bottom: 1rem;
     }
