--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -31,7 +31,11 @@ a:hover {
 }
 
 
-/* Nav Toggler */
+/* 
+----------------
+Nav Toggler
+----------------
+ */
 
 .navbar a {
     color: black;
@@ -203,8 +207,13 @@ Hero
 ----------------
  */
 
+.hero {
+    display: flex;
+    justify-content: space-between;
+}
+
 .hero-image {
-    width: 65%;
+    flex: 65%;
     height: 20%;
 }
 
@@ -215,6 +224,8 @@ img {
 
 .name {
     color: #a4c3b2;
+    flex: 35%;
+    padding-right: 2rem;
 }
 
 
@@ -246,6 +257,7 @@ Image-section
     background-image: url(../images/image-section1.JPG);
     background-position: 80% 100%;
     background-attachment: fixed;
+    background-size: 100vw;
 }
 
 
@@ -385,12 +397,6 @@ Contact
     margin-bottom: 2.2em;
 }
 
-
-/* .info-box:hover,
-.info-box:hover a {
-    color: #a4c3b2;
-} */
-
 .info-box i:hover {
     color: #a4c3b2;
 }
@@ -419,51 +425,61 @@ Media Queries
 ----------------
  */
 
-@media screen and (min-width: 1201px) {
-    .hero {
-        display: flex;
-        justify-content: space-between;
-    }
-    /* #portfolio {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 2rem;
-    } */
-}
-
-@media screen and (min-width: 767px) and (max-width: 1200px) {
-    /* #portfolio {
-        display: grid;
-        grid-template-columns: 1fr;
-    } */
-    .hero {
-        display: block;
-    }
-    .hero-image {
-        width: 100%;
+@media screen and (max-width:1024px) {
+    .about-container {
+        margin: 2rem 3rem;
     }
 }
 
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media screen and (max-width:768px) {
     html {
         font-size: 80%;
     }
-    /* #portfolio {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin: 2em 0;
-    } */
+    .hero {
+        flex-direction: column-reverse;
+    }
+    .hero-image {
+        width: 100vw;
+        border: none !important;
+    }
+    .name {
+        margin-top: 2rem;
+    }
+    .image-section {
+        background-attachment: unset;
+        background-size: 768px;
+        padding: 27%;
+    }
+    .service-box {
+        padding: 2rem 3rem;
+    }
+    .number {
+        padding-top: 1rem;
+    }
 }
 
-@media screen and (max-width: 480px) {
-    html {
-        font-size: 60%;
+@media screen and (max-width:480px) {
+    .image-section {
+        background-attachment: unset;
+        background-size: 480px;
+        padding: 27%;
     }
-    /* #portfolio {
-        display: grid;
-        grid-template-columns: 1fr;
-    } */
-    .item {
-        margin-bottom: 1rem;
+    .about-container {
+        margin: 2rem;
+        padding: 1rem;
+    }
+    .tech .text-center p {
+        display: none;
+    }
+    #projects {
+        margin-bottom: 0 !important;
+    }
+    .navbar-brand img {
+        width: 80%;
+        object-fit: contain;
+    }
+    .navbar-brand {
+        margin: 0 !important;
+        padding: 0 !important;
     }
 }
