--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -39,10 +39,6 @@ Nav Toggler
 ----------------
  */
 
-.navbar a {
-    color: black;
-}
-
 .menu-icon {
     position: relative;
     width: 50px;
@@ -152,22 +148,16 @@ Nav-Bar
 ---------------
  */
 
-.logo {
-    width: 100px;
-    height: 80px;
+.navbar a {
+    color: black;
 }
 
-.primary-nav a {
-    margin: 0 2rem;
-    padding: 0 0rem 0.3rem;
+.navbar a:hover {
+    color: black;
 }
 
-.primary-nav li a:hover {
+.navbar li a:hover {
     font-style: italic;
-}
-
-.primary-nav a {
-    margin: 0;
 }
 
 .navbar-collapse {
@@ -177,7 +167,7 @@ Nav-Bar
 
 /* 
 ----------------
-Hero
+Hero & About
 ----------------
  */
 
@@ -193,47 +183,17 @@ Hero
 
 img {
     width: 100%;
-    object-fit: cover;
 }
 
 .hero-heading {
-    position: sticky;
     padding: 0 0.2em;
     background-color: #dad7cd;
-}
-
-
-/* 
-----------------
-About
-----------------
- */
-
-.about-img {
-    width: 100%;
 }
 
 .about-content {
     text-align: end;
     flex: 35%;
     padding-right: 2rem;
-}
-
-
-/*
-----------------
-Image-section
-----------------
-*/
-
-.image-section {
-    width: 100vw;
-    padding: 20%;
-    background-image: url(../images/image-section1.JPG);
-    background-position: 80% 100%;
-    background-attachment: fixed;
-    background-size: cover;
-    background-repeat: no-repeat;
 }
 
 
@@ -259,6 +219,23 @@ Service
 }
 
 
+/*
+----------------
+Image-section
+----------------
+*/
+
+.image-section {
+    width: 100vw;
+    padding: 20%;
+    background-image: url(../images/image-section1.JPG);
+    background-position: 80% 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+
 /* 
 ----------------
 Portfolio
@@ -266,13 +243,11 @@ Portfolio
  */
 
 .portfolio_image {
-    width: 100%;
     height: 100%;
-    object-fit: contain;
 }
 
 .item {
-    height: auto;
+    /* height: auto; */
     padding: 1rem;
     transition: 0.5s;
 }
@@ -317,7 +292,6 @@ Portfolio
     text-transform: uppercase;
     text-decoration: none;
     font-size: 80%;
-    /* transition: 0.5s; */
 }
 
 .live-site:hover {
@@ -329,7 +303,7 @@ Portfolio
 
 /* 
 ------------------
-Technologie
+Technologies
 -----------------
 */
 
@@ -398,37 +372,9 @@ Media Queries
  */
 
 @media (min-width: 1024px) {
-    /* nav-bar */
+    /* nav-bar toggler */
     .menu-icon {
         display: none;
-    }
-    /* .item:hover {
-        transform: scale(1.2);
-        transition: 0.3s;
-    }
-    .description>* {
-        transform: translateY(30px);
-        transition: transform 0.25s;
-    }
-    .item:hover .description {
-        visibility: visible;
-    }
-    .description:hover>* {
-        transform: translateY(0);
-    }
-    .live-site {
-        transition: 0.5s;
-    }
-    .live-site:hover {
-        transition: 0.2s;
-        letter-spacing: 0.1em;
-        color: white;
-    } */
-}
-
-@media screen and (max-width:1024px) {
-    .about-container {
-        margin: 2rem 3rem;
     }
 }
 
@@ -445,26 +391,19 @@ Media Queries
     .service-box {
         padding: 2rem 3rem;
     }
-    /* portfolio section */
-    /* .description>* {
-        transform: translateY(-10px);
-        transition: 0.25s;
-    } */
-    .description h4 {
-        font-size: 200%;
-    }
-    .description a {
-        font-size: 130%;
-    }
-    /* contact-section */
     .number {
         padding-top: 1rem;
     }
+    /* portfolio section */
+    .description h4 {
+        font-size: 250%;
+    }
+    .description .live-site {
+        font-size: 130%;
+    }
+    /* contact-section */
     .numberShow .clicked .phone-number {
         display: inline;
-    }
-    .numberShow .notclicked .phone-number {
-        display: none;
     }
 }
 
@@ -472,21 +411,11 @@ Media Queries
     h1 {
         font-size: calc(3.375rem + 1.5vw);
     }
-    /* nav-bar */
-    .navbar-brand img {
-        width: 80%;
-        object-fit: contain;
-    }
-    .navbar-brand {
-        margin: 0 !important;
-        padding: 0 !important;
-    }
     /* hero & about section */
     .hero {
         flex-direction: column-reverse;
     }
     .hero-image {
-        width: 100vw;
         border: none !important;
     }
     .about-content {
@@ -501,21 +430,24 @@ Media Queries
     #projects {
         margin-bottom: 0 !important;
     }
-    .tech .text-center p {
-        display: none;
+    .description h4 {
+        font-size: 250%;
+    }
+    .description .live-site {
+        font-size: 120%;
     }
     .tech {
         margin-bottom: 3rem;
     }
-    .description h4 {
-        font-size: 150%;
-    }
-    .description a {
-        font-size: 90%;
+    .tech .text-center p {
+        display: none;
     }
     /* contact-section */
     .email {
         padding: 2rem 0;
+    }
+    .contact-icons {
+        margin-top: 2rem;
     }
 }
 
@@ -529,8 +461,14 @@ Media Queries
     }
     .fs-5 {
         margin-left: 1rem;
-        margin-bottom: 1rem;
     }
+    /* portfolio-section */
+    .description h4 {
+        font-size: 190%;
+    }
+    /* .description .live-site {
+        font-size: 100%;
+    } */
 }
 
 @media screen and (max-width: 320px) {
