changed media queries in foodblog

--- a/Projects/Foodblog/styles.css
+++ b/Projects/Foodblog/styles.css
@@ -461,6 +461,9 @@ Media Queries
   .method {
     margin-top: 2rem;
   }
+  .jamie {
+    padding: 0;
+  }
   .about .about-image div {
     padding: 1rem 0;
   }
