--- a/Projects/Foodblog/styles.scss
+++ b/Projects/Foodblog/styles.scss
@@ -422,6 +422,9 @@ Media Queries
                 .method {
                     margin-top: 2rem;
                 }
+                .jamie {
+                    padding: 0;
+                }
                 // about page
                 .about {
                     .about-image {
