--- a/Projects/Foodblog/styles.scss
+++ b/Projects/Foodblog/styles.scss
@@ -378,7 +378,11 @@ Media Queries
                 }
             }
             
-            @media screen and (min-width: 481px) and (max-width: 768px) {
+            @media screen and (max-width: 768px) {
+                .recipe-img,
+                .image-fixed {
+                    background-attachment: scroll;
+                }
                 .grid {
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
@@ -407,9 +411,6 @@ Media Queries
                     .grid-item {
                         margin-bottom: 5%;
                     }
-                }
-                .top-nav {
-                    font-size: 70%;
                 }
                 // recipe of the month
                 .flex-ingredients {
