--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -281,6 +281,7 @@ Portfolio
     text-transform: uppercase;
     text-decoration: none;
     font-size: 80%;
+    transition: 0.2s;
 }
 
 .live-site:hover {
