--- a/CSS/stlye.css
+++ b/CSS/stlye.css
@@ -281,7 +281,6 @@ Portfolio
     text-transform: uppercase;
     text-decoration: none;
     font-size: 80%;
-    transition: 0.2s;
 }
 
 .live-site:hover {
@@ -376,6 +375,7 @@ Media Queries
     .about-content {
         margin-top: 2rem;
         margin-bottom: 2rem;
+        padding-left: 1rem !important;
     }
     /* skills */
     .service-box {
